results/SpecGenBench/2-shot/log-DigitCount-2023_11_05_23_41_57.txt
import java.util.Map;
import java.util.HashMap;

class DigitCount {
    //@ requires (\forall int i; 0 <= i && i < num.length(); (int)Character.MIN_VALUE <= (int)num.charAt(i) && (int)num.charAt(i) <= (int)Character.MAX_VALUE);
    //@ assignable \nothing;
    //@ ensures \result <==> (\forall int i; 0 <= i && i < num.length(); h.getOrDefault(i, 0) == (int)num.charAt(i) - '0');
    public boolean digitCount(String num) {
        Map<Integer, Integer> h = new HashMap<Integer, Integer>();
        int n = num.length();
        //@ maintaining 0 <= i && i <= n;
        //@ maintaining (\forall int j; 0 <= j && j < i; h.getOrDefault((int)num.charAt(j) - '0', 0) == (\old(h.getOrDefault((int)num.charAt(j) - '0', 0)) + 1));
        //@ decreases n - i;
        for (int i = 0; i < n; i++) {
            int digit = num.charAt(i) - '0';
            h.put(digit, h.getOrDefault(digit, 0) + 1);
        }
        //@ maintaining 0 <= i && i <= n;
        //@ maintaining (\forall int j; 0 <= j && j < i; h.getOrDefault(j, 0) == (int)num.charAt(j) - '0');
        //@ decreases n - i;
        for (int i = 0; i < n; i++) {
            int v = num.charAt(i) - '0';
            if (h.getOrDefault(i, 0) != v) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/DigitCount.java:7: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < num.length(); h.getOrDefault(i, 0) == (int)num.charAt(i) - '0');
                                                                         ^
  symbol:   variable h
  location: class DigitCount
/home/max/Documents/JMLGPT/tmp/DigitCount.java:12: warning: A non-pure method is being called where it is not permitted: java.util.Map.getOrDefault(java.lang.Object,V)
        //@ maintaining (\forall int j; 0 <= j && j < i; h.getOrDefault((int)num.charAt(j) - '0', 0) == (\old(h.getOrDefault((int)num.charAt(j) - '0', 0)) + 1));
                                                                       ^
/home/max/Documents/JMLGPT/tmp/DigitCount.java:12: error: cannot find symbol
        //@ maintaining (\forall int j; 0 <= j && j < i; h.getOrDefault((int)num.charAt(j) - '0', 0) == (\old(h.getOrDefault((int)num.charAt(j) - '0', 0)) + 1));
                                                                                                              ^
  symbol:   variable h
  location: class DigitCount
/home/max/Documents/JMLGPT/tmp/DigitCount.java:19: warning: A non-pure method is being called where it is not permitted: java.util.Map.getOrDefault(java.lang.Object,V)
        //@ maintaining (\forall int j; 0 <= j && j < i; h.getOrDefault(j, 0) == (int)num.charAt(j) - '0');
                                                                       ^
2 errors
2 warnings

